[gd_scene load_steps=17 format=3 uid="uid://b6sy572h06xqn"]

[ext_resource type="Script" uid="uid://bgmlopaqxx325" path="res://addons/universal_settings/scenes/universal_settings_menu.gd" id="1_c2d6w"]
[ext_resource type="PackedScene" uid="uid://dayahwfbx70ri" path="res://addons/universal_settings/scenes/ui/drop_downs/window_mode_container.tscn" id="2_6dc7h"]
[ext_resource type="PackedScene" uid="uid://dvvyu2gni5x0c" path="res://addons/universal_settings/scenes/ui/components/3d_scale_container.tscn" id="2_7qv6v"]
[ext_resource type="PackedScene" uid="uid://d5d4do5no2tw" path="res://addons/universal_settings/scenes/ui/drop_downs/fsr_container.tscn" id="2_i04ro"]
[ext_resource type="PackedScene" uid="uid://dssr3713gcxly" path="res://addons/universal_settings/scenes/ui/drop_downs/msaa_container.tscn" id="2_nvwi4"]
[ext_resource type="PackedScene" uid="uid://xypbbv77q8om" path="res://addons/universal_settings/scenes/ui/drop_downs/monitor_container.tscn" id="2_rrgpx"]
[ext_resource type="PackedScene" uid="uid://cwgy3qn26typm" path="res://addons/universal_settings/scenes/ui/checkboxes/fxaa_check_box.tscn" id="2_vewf4"]
[ext_resource type="PackedScene" uid="uid://dq554s5nul5o2" path="res://addons/universal_settings/scenes/ui/drop_downs/resolution_container.tscn" id="2_ysr1t"]
[ext_resource type="PackedScene" uid="uid://7gjmbcp7rbty" path="res://addons/universal_settings/scenes/ui/checkboxes/taa_check_box.tscn" id="3_0rip6"]
[ext_resource type="PackedScene" uid="uid://c35mvpyxxtfhe" path="res://addons/universal_settings/scenes/ui/checkboxes/v_sync_check_box.tscn" id="4_nsxbx"]
[ext_resource type="PackedScene" uid="uid://ctrd4r3cpe6ke" path="res://addons/universal_settings/scenes/ui/audio/audio_container.tscn" id="11_rrgpx"]
[ext_resource type="PackedScene" uid="uid://bsxhjjwntlrdp" path="res://addons/universal_settings/scenes/ui/keybinds/keybind_list.tscn" id="12_rrgpx"]

[sub_resource type="Animation" id="Animation_mjsge"]
resource_name = "HideSettings"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gj7co"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ic603"]
resource_name = "ShowSettings"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_heq78"]
_data = {
&"HideSettings": SubResource("Animation_mjsge"),
&"RESET": SubResource("Animation_gj7co"),
&"ShowSettings": SubResource("Animation_ic603")
}

[node name="UniversalSettingsMenu" type="ColorRect"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
script = ExtResource("1_c2d6w")

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.0
offset_top = -257.0
offset_right = 299.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="TabContainer" type="TabContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 300)
layout_mode = 2
size_flags_horizontal = 4
current_tab = 0
all_tabs_in_front = true
tab_focus_mode = 0

[node name="Graphics" type="TabBar" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 36
tab_alignment = 1
clip_tabs = false
scroll_to_selected = false
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.5
offset_top = -122.5
offset_right = 266.5
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="MonitorContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer" instance=ExtResource("2_rrgpx")]
layout_mode = 2

[node name="WindowModeContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer" instance=ExtResource("2_6dc7h")]
layout_mode = 2

[node name="ResolutionContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer" instance=ExtResource("2_ysr1t")]
layout_mode = 2

[node name="MSAAContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer" instance=ExtResource("2_nvwi4")]
layout_mode = 2

[node name="FSRContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer" instance=ExtResource("2_i04ro")]
layout_mode = 2

[node name="3DScaleContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer" instance=ExtResource("2_7qv6v")]
layout_mode = 2

[node name="AAContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="FXAACheckBox" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/AAContainer" instance=ExtResource("2_vewf4")]
layout_mode = 2

[node name="TAACheckBox" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/AAContainer" instance=ExtResource("3_0rip6")]
layout_mode = 2

[node name="VSyncCheckBox" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/AAContainer" instance=ExtResource("4_nsxbx")]
layout_mode = 2

[node name="Audio" type="TabBar" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="AudioContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio" instance=ExtResource("11_rrgpx")]
layout_mode = 1

[node name="Keybinds" type="TabBar" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Keybinds"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Keybinds/MarginContainer"]
layout_mode = 2

[node name="KeybindList" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Keybinds/MarginContainer/ScrollContainer" instance=ExtResource("12_rrgpx")]
layout_mode = 2

[node name="ResetButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Reset Keybinds to Default"

[node name="SaveButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" groups=["Button"]]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 36
text = "Save"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_heq78")
}

[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
